--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Parses a sequelize url into a configuration object",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint .",
-    "format": "prettier --write '**/*.js'"
+    "test": "mocha test/spec/**/*.test.js",
+    "compat": "nvs 14,12,10,8,6,4,0.12,0.10,0.8 mocha-compat test/spec/**/*.test.js",
+    "lint": "eslint . --ext js,mjs",
+    "format": "prettier --write '**/*.{js,mjs}'"
   },
   "repository": {
     "type": "git",
@@ -34,6 +36,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "mocha-compat": "^3.5.5",
+    "nvs": "^0.2.0",
     "prettier": "^2.0.5"
   }
 }
