--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sequelize-parse-url",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Parses a sequelize url into a configuration object",
   "main": "index.js",
   "scripts": {
@@ -36,8 +36,9 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "mocha": "^7.1.2",
     "mocha-compat": "^3.5.5",
-    "nvs": "^0.2.0",
+    "nvs": "^0.1.8",
     "prettier": "^2.0.5"
   }
 }
