--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,52 +1,21 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
       "type": "node",
       "request": "launch",
-      "name": "Mocha",
-      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
-      "args": [
-        "--timeout",
-        "999999",
-        "--colors",
-        "${workspaceFolder}/test/spec/**/*.test.js"
-      ],
+      "name": "test:node (mac)",
+      "program": "/Users/kevin/.nvm/versions/node/v22.12.0/lib/node_modules/ts-dev-stack/bin/cli.cjs",
+      "args": ["test:node", "--no-timeouts"],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen"
     },
     {
       "type": "node",
       "request": "launch",
-      "name": "Mocha Compat",
-      "program": "${workspaceFolder}/node_modules/mocha-compat/bin/_mocha-compat",
-      "args": [
-        "--timeout",
-        "999999",
-        "--colors",
-        "${workspaceFolder}/test/spec/**/*.test.js"
-      ],
-      "console": "integratedTerminal",
-      "internalConsoleOptions": "neverOpen"
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Memory Performance",
-      "cwd": "${workspaceFolder}/performance",
-      "program": "${workspaceFolder}/performance/memory/index.js",
-      "console": "integratedTerminal",
-      "internalConsoleOptions": "neverOpen"
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Operations Performance",
-      "cwd": "${workspaceFolder}/performance",
-      "program": "${workspaceFolder}/performance/operations/index.js",
+      "name": "test:node (windows)",
+      "program": "C:/Program Files (x86)/nodejs/node_modules/ts-dev-stack/bin/cli.cjs",
+      "args": ["test:node", "--no-timeouts"],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen"
     }
