--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sequelize-parse-url",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Parses a sequelize url into a configuration object",
   "keywords": [
     "sequelize",
@@ -20,30 +20,32 @@
   },
   "license": "MIT",
   "author": "Kevin Malakoff",
-  "main": "lib/index.js",
+  "main": "dist/cjs/index.cjs",
+  "types": "dist/types/index.d.ts",
   "files": [
-    "lib"
+    "dist"
   ],
   "scripts": {
-    "format": "prettier --write '**/*.{js,mjs}'",
-    "lint": "eslint . --ext js,mjs",
-    "prepublishOnly": "npm run lint && depcheck",
-    "test": "mocha-compat test/spec/**/*.test.js",
-    "test:engines": "nvu engines npm test"
+    "build": "tsds build",
+    "deploy": "tsds deploy",
+    "docs": "tsds docs",
+    "format": "biome check --write --unsafe src/ test/",
+    "test": "tsds test:node --no-timeouts",
+    "test:engines": "nvu engines npm test",
+    "version": "tsds version"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^5.30.7",
-    "depcheck": "^1.4.3",
-    "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-promise": "^6.0.0",
-    "mocha-compat": "^3.5.5",
-    "prettier": "^2.7.1"
+    "@biomejs/biome": "^1.9.4",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.10.5"
   },
   "engines": {
     "node": ">=0.8"
+  },
+  "tsds": {
+    "source": "src/index.mjs",
+    "targets": [
+      "cjs"
+    ]
   }
 }
