--- a/.depcheckrc
+++ b/.depcheckrc
@@ -1,1 +1,1 @@
-ignores: ["node-version-use", "ts-dev-stack", "@biomejs/biome", "sequelize-parse-url"]
+ignores: ["node-version-use", "ts-dev-stack", "sequelize-parse-url"]
